[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ionix-mcp"
version = "1.0.0"
description = "IONIX MCP Server - Model Context Protocol server for IONIX API"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "IONIX"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.1.0",
    "python-dotenv>=0.19.0",
    "httpx>=0.24.0",
]

[project.scripts]
ionix-mcp = "ionix:main"

[tool.hatch.build.targets.wheel]
include = [
    "ionix.py",
    "__init__.py",
    "__main__.py",
    "requirements.txt"
]

[project.urls]
Homepage = "https://github.com/Cyberpion-Github/ionix-mcp-server"
Repository = "https://github.com/Cyberpion-Github/ionix-mcp-server"